--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   width: 90%;
   max-width: 1400px;
   min-height: 90%;
+  max-height: 90%;
   background: #fff;
   border-radius: 20px;
   display: flex;
@@ -229,6 +230,25 @@
 }
 
 @media screen and (max-width: 540px) {
+  .content-container {
+    min-height: unset;
+    height: fit-content;
+    margin-bottom: auto;
+    margin-top: 20%;
+  }
+
+  .logo {
+    width: 93px;
+    height: auto;
+  }
+  .title {
+    margin-bottom: 8px;
+  }
+
+  .description {
+    margin-bottom: 12px;
+  }
+
   .mockup-mobile {
     width: 100%;
   }
@@ -237,6 +257,13 @@
     width: 100%;
     margin-top: 32px;
     max-width: unset;
+  }
+
+  .countdown-info {
+    font-size: 18px;
+    text-align: left;
+    width: 100%;
+    margin-bottom: 12px;
   }
 
   .countdown {
@@ -248,6 +275,10 @@
     padding: 8px 4px;
   }
 
+  .mockup-mobile {
+    margin-bottom: 20px;
+  }
+
   .count {
     font-size: 36px;
     padding: 0 14px;
@@ -255,5 +286,17 @@
 
   .label {
     font-size: 20px;
+  }
+  .btn {
+    margin-top: 24px;
+    height: 48px;
+  }
+  .btn-icon-wrapper {
+    width: 32px;
+    height: 32px;
+  }
+  .btn-icon {
+    width: 16px;
+    height: 16px;
   }
 }
