--- a/src/index.css
+++ b/src/index.css
@@ -10,9 +10,10 @@
 html,
 body {
   width: 100%;
-  height: 100vh;
+  height: 100dvh;
   font-family: "Lato", sans-serif;
-  overflow: hidden;
+  overflow-y: hidden;
+  overflow-x: hidden;
   background: linear-gradient(
     to bottom,
     hsla(207, 97%, 43%, 1),
@@ -31,6 +32,18 @@ body {
   align-items: center;
   justify-content: center;
 
-  overflow: hidden;
-  height: 100vh;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  height: 100dvh;
+}
+
+@media screen and (max-width: 540px) {
+  html,
+  body {
+    overflow-y: auto;
+  }
+
+  #root {
+    overflow-y: auto;
+  }
 }
